Bug 1683979 - Audio min / pref isize should not depend the controls. r=dholbert

Otherwise the adjustments that the media controls do in response to size
changes affect the size itself, which can cause cyclic layout.

Differential Revision: https://phabricator.services.mozilla.com/D100722